--- a/source/index.html
+++ b/source/index.html
@@ -4,9 +4,166 @@
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
   </head>
-  <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS, уровень 2</a>».</p>
+  <body class="page__body">
+    <header class="page-header">
+      <a class="page-header__logo">
+        <img class="page-header__logo-image" src="https://via.placeholder.com/150x150" width="33" height="37" alt="Кэт энерджи">
+      </a>
+      <p class="page-header__title"><b>Cat</b> energy</p>
+      <nav class="main-nav">
+        <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+        <div class="main-nav__wrapper">
+          <ul class="main-nav__list site-list">
+            <li class="site-list__item site-list__item--active">
+              <a>
+                Главная
+              </a>
+            </li>
+            <li class="site-list__item">
+              <a href="catalog.html">
+                Каталог продукции
+              </a>
+            </li>
+            <li class="site-list__item">
+              <a href="form.html">
+                Подбор программы
+              </a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <main class="page-main">
+      <h1 class="page-main__heading">Функциональное питание для котов</h1>
+      <p class="page-main__slogan">Занялся собой? Займись котом!</p>
+      <section class="programs">
+        <h2 class="visually-hidden">
+          Программы
+        </h2>
+        <div class="programs__wrapper">
+          <a class="programs__button" href="form.html">Подобрать программу</a>
+          <ul class="programs__list">
+            <li class="programs__item programs__item--slim">
+              <article class="programs__card programs__card--slim">
+                <h3 class="programs__title">Похудение</h3>
+                <p class="programs__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+                <a class="programs__link" href="catalog.html">Каталог slim</a>
+              </article>
+            </li>
+            <li class="programs__item programs__item--pro">
+              <article class="programs__card programs__card--pro">
+                <h3 class="programs__title">Набор массы</h3>
+                <p class="programs__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+                <a class="programs__link" href="catalog.html">Каталог pro</a>
+              </article>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="details">
+        <div class="details__wrapper">
+          <h2 class="details__heading">
+            Как это работает
+          </h2>
+          <ul class="details__list">
+            <li class="details__item details__item--beneficial">
+              Функциональное питание содержит только полезные питательные вещества.
+            </li>
+            <li class="details__item details__item--powder">
+              Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
+            </li>
+            <li class="details__item details__item--replacement">
+              Замените один-два приема обычной еды на наше функциональное питание.
+            </li>
+            <li class="details__item details__item--changes">
+              Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="example">
+        <div class="example__wrapper">
+          <h2 class="example__heading">
+            Живой пример
+          </h2>
+          <p class="example__description">
+            Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+          </p>
+          <div class="example-result">
+            <div class="example-result__item example-result__item--weight">
+              <p class="example__count">5 кг</p>
+              <p class="example__text">снижение веса</p>
+            </div>
+            <div class="example-result__item example-result__item--duration">
+              <p class="example__count">60 дней</p>
+              <p class="example__text">затрачено времени</p>
+            </div>
+          </div>
+          <p class="example__costs">Затраты на питание: 15 000 РУБ.</p>
+          <div class="example__slider slider">
+            <ul class="slider__list">
+              <li class="slider__item slider__item--before slider__item--current">
+                <img class="slider__photo slider__photo--before" src="https://via.placeholder.com/150x150" width="311" height="232" alt="Фото до">
+              </li>
+              <li class="slider__item slider__item--after">
+                <img class="slider__photo slider__photo--after" src="https://via.placeholder.com/150x150" width="311" height="232" alt="Фото после">
+              </li>
+            </ul>
+            <div class="slider__toggles-wrapper">
+              <div class="slider__text">Было</div>
+              <p class="slider__toggles">
+                <button class="slider__toggle slider__toggle--current" type="button">1</button>
+                <button class="slider__toggle" type="button">2</button>
+              </p>
+              <div class="slider__text">Стало</div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="address">
+        <div class="address__wrapper">
+          <h2 class="visually-hidden">
+            Адрес
+          </h2>
+          <p class="address__text">
+            Приглашаем к сотрудничеству дилеров!
+          </p>
+          <p class="address__info">
+            ул. Большая Конюшенная, д. 19/8 Санкт-Петербург
+          </p>
+        </div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036253002806!2d30.320858715702567!3d59.93871916905467!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1602447651566!5m2!1sru!2sru" width="320" height="362" title="Адрес магазина: г.Санкт-Петербург ул. Б. Конюшенная д.19/8" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+      </section>
+      <footer class="page-footer">
+        <p class="page-footer__heading"><b>Cat</b> energy</p>
+        <section class="page-footer__social social">
+          <div class="social__wrapper">
+            <h2 class="visually-hidden">
+              Социальные сети
+            </h2>
+            <ul class="social__list">
+              <li class="social__item">
+                <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy"><span class="visually-hidden">Вконтакте</span></a>
+              </li>
+              <li class="social__item">
+                <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy"><span class="visually-hidden">Инстаграм</span></a>
+              </li>
+              <li class="social__item">
+                <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy"><span class="visually-hidden">Фейсбук</span></a>
+              </li>
+            </ul>
+          </div>
+        </section>
+        <section class="page-footer__copyright copyright">
+          <div class="copyright__wrapper">
+            <h2 class="visually-hidden">
+              Копирайт
+            </h2>
+            <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+          </div>
+        </section>
+      </footer>
+    </main>
 
   </body>
 </html>
