Добавила aria-label в кнопки слайдера

--- a/source/index.html
+++ b/source/index.html
@@ -112,8 +112,8 @@
             <div class="slider__toggles-wrapper">
               <div class="slider__text">Было</div>
               <p class="slider__toggles">
-                <button class="slider__toggle slider__toggle--current" type="button"><span class="visually-hidden">Первый слайд</span></button>
-                <button class="slider__toggle" type="button"><span class="visually-hidden">Второй слайд</span></button>
+                <button class="slider__toggle slider__toggle--current" type="button" aria-label="Первый слайд"></button>
+                <button class="slider__toggle" type="button" aria-label="Второй слайд"></button>
               </p>
               <div class="slider__text">Стало</div>
             </div>
