--- a/source/index.html
+++ b/source/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
@@ -12,7 +12,6 @@
       <p class="page-header__title"><b>Cat</b> energy</p>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-        <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
             <li class="site-list__item site-list__item--active">
               <a>
@@ -30,7 +29,6 @@
               </a>
             </li>
           </ul>
-        </div>
       </nav>
     </header>
     <main class="page-main">
@@ -99,7 +97,7 @@
               <p class="example__text">затрачено времени</p>
             </div>
           </div>
-          <p class="example__costs">Затраты на питание: 15 000 РУБ.</p>
+          <p class="example__costs">Затраты на питание: 15 000 руб.</p>
           <div class="example__slider slider">
             <ul class="slider__list">
               <li class="slider__item slider__item--before slider__item--current">
@@ -110,35 +108,31 @@
               </li>
             </ul>
             <div class="slider__toggles-wrapper">
-              <div class="slider__text">Было</div>
-              <p class="slider__toggles">
-                <button class="slider__toggle slider__toggle--current" type="button" aria-label="Первый слайд"></button>
-                <button class="slider__toggle" type="button" aria-label="Второй слайд"></button>
-              </p>
-              <div class="slider__text">Стало</div>
+
             </div>
           </div>
         </div>
       </section>
+      <section class="address">
+        <div class="address__wrapper">
+          <h2 class="visually-hidden">
+            Адрес
+          </h2>
+          <p class="address__text">
+            Приглашаем к сотрудничеству дилеров!
+          </p>
+          <p class="address__info">
+            ул. Большая Конюшенная, д. 19/8 Санкт-Петербург
+          </p>
+        </div>
+        <div class="address__map">
+
+        </div>
+      </section>
     </main>
       <footer class="page-footer">
-        <section class="address">
-          <div class="address__wrapper">
-            <h2 class="visually-hidden">
-              Адрес
-            </h2>
-            <p class="address__text">
-              Приглашаем к сотрудничеству дилеров!
-            </p>
-            <p class="address__info">
-              ул. Большая Конюшенная, д. 19/8 Санкт-Петербург
-            </p>
-          </div>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036253002806!2d30.320858715702567!3d59.93871916905467!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1602447651566!5m2!1sru!2sru" width="320" height="362" title="Адрес магазина: г.Санкт-Петербург ул. Б. Конюшенная д.19/8" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-        </section>
         <p class="page-footer__heading"><b>Cat</b> energy</p>
-        <section class="page-footer__social social">
-          <div class="social__wrapper">
+        <div class="page-footer__social social">
             <h2 class="visually-hidden">
               Социальные сети
             </h2>
@@ -153,16 +147,13 @@
                 <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy"><span class="visually-hidden">Фейсбук</span></a>
               </li>
             </ul>
-          </div>
-        </section>
-        <section class="page-footer__copyright copyright">
-          <div class="copyright__wrapper">
+        </div>
+        <div class="page-footer__copyright copyright">
             <h2 class="visually-hidden">
               Копирайт
             </h2>
             <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-          </div>
-        </section>
+        </div>
       </footer>
 
   </body>
