Исправления по замечаниям - добавила названия страниц, ссылки, убрала заголовок к копирайте, поменяла название классов в форме, заменила article на div

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,16 +3,16 @@
 
 <head>
   <meta charset="utf-8">
-  <title>HTML Academy: Кэт энерджи</title>
+  <title>Каталог Кэт энерджи</title>
 </head>
 
 <body class="page__body">
   <header class="page-header">
-    <a class="page-header__logo">
+    <a class="page-header__logo" href="index.html">
       <img class="page-header__logo-image" src="https://via.placeholder.com/150x150" width="33" height="37"
         alt="Кэт энерджи">
     </a>
-    <p class="page-header__title"><b>Cat</b> energy</p>
+    <a class="page-header__title" href="index.html"><b>Cat</b> energy</a>
     <nav class="main-nav">
       <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
       <ul class="main-nav__list site-list">
@@ -40,11 +40,11 @@
       <h2 class="visually-hidden">Список продуктов</h2>
       <ul class="products__list">
         <li class="products__item">
-          <article class="products__card">
-            <a class="products__name-link" href="#">
+          <div class="products__card">
+            <a class="products__name-link" href="product.html">
               Cat Energy PRO 500 г
             </a>
-            <a class="products__photo-link" href="#">
+            <a class="products__photo-link" href="product.html">
               <img class="products__photo" src="https://via.placeholder.com/150x150" width="68" height="86"
                 alt="Cat Energy PRO 500 г курица">
             </a>
@@ -62,15 +62,15 @@
                 <td>700 р.</td>
               </tr>
             </table>
-            <a class="products__link" href="#">Заказать</a>
-          </article>
+            <a class="products__link" href="cart.html">Заказать</a>
+          </div>
         </li>
         <li class="products__item">
-          <article class="products__card">
-            <a class="products__name-link" href="#">
+          <div class="products__card">
+            <a class="products__name-link" href="product.html">
               Cat Energy PRO 1000 г
             </a>
-            <a class="products__photo-link" href="#">
+            <a class="products__photo-link" href="product.html">
               <img class="products__photo" src="https://via.placeholder.com/150x150" width="84" height="100"
                 alt="Cat Energy PRO 1000 г курица">
             </a>
@@ -88,15 +88,15 @@
                 <td>1000 р.</td>
               </tr>
             </table>
-            <a class="products__link" href="#">Заказать</a>
-          </article>
+            <a class="products__link" href="cart.html">Заказать</a>
+          </div>
         </li>
         <li class="products__item">
-          <article class="products__card">
-            <a class="products__name-link" href="#">
+          <div class="products__card">
+            <a class="products__name-link" href="product.html">
               Cat Energy PRO 500 г
             </a>
-            <a class="products__photo-link" href="#">
+            <a class="products__photo-link" href="product.html">
               <img class="products__photo" src="https://via.placeholder.com/150x150" width="68" height="78"
                 alt="Cat Energy PRO 500 г рыба">
             </a>
@@ -114,15 +114,15 @@
                 <td>700 р.</td>
               </tr>
             </table>
-            <a class="products__link" href="#">Заказать</a>
-          </article>
+            <a class="products__link" href="cart.html">Заказать</a>
+          </div>
         </li>
         <li class="products__item">
-          <article class="products__card">
-            <a class="products__name-link" href="#">
+          <div class="products__card">
+            <a class="products__name-link" href="product.html">
               Cat Energy PRO 1000 г
             </a>
-            <a class="products__photo-link" href="#">
+            <a class="products__photo-link" href="product.html">
               <img class="products__photo" src="https://via.placeholder.com/150x150" width="84" height="100"
                 alt="Cat Energy PRO 1000 г рыба">
             </a>
@@ -140,15 +140,15 @@
                 <td>1000 р.</td>
               </tr>
             </table>
-            <a class="products__link" href="#">Заказать</a>
-          </article>
+            <a class="products__link" href="cart.html">Заказать</a>
+          </div>
         </li>
         <li class="products__item">
-          <article class="products__card">
-            <a class="products__name-link" href="#">
+          <div class="products__card">
+            <a class="products__name-link" href="product.html">
               Cat Energy slim 500 г
             </a>
-            <a class="products__photo-link" href="#">
+            <a class="products__photo-link" href="product.html">
               <img class="products__photo" src="https://via.placeholder.com/150x150" width="68" height="78"
                 alt="Cat Energy slim 500 г гречка">
             </a>
@@ -166,15 +166,15 @@
                 <td>400 р.</td>
               </tr>
             </table>
-            <a class="products__link" href="#">Заказать</a>
-          </article>
+            <a class="products__link" href="cart.html">Заказать</a>
+          </div>
         </li>
         <li class="products__item">
-          <article class="products__card">
-            <a class="products__name-link" href="#">
+          <div class="products__card">
+            <a class="products__name-link" href="product.html">
               Cat Energy slim 1000 г
             </a>
-            <a class="products__photo-link" href="#">
+            <a class="products__photo-link" href="product.html">
               <img class="products__photo" src="https://via.placeholder.com/150x150" width="84" height="100"
                 alt="Cat Energy slim 1000 г гречка">
             </a>
@@ -192,15 +192,15 @@
                 <td>700 р.</td>
               </tr>
             </table>
-            <a class="products__link" href="#">Заказать</a>
-          </article>
+            <a class="products__link" href="cart.html">Заказать</a>
+          </div>
         </li>
         <li class="products__item">
-          <article class="products__card">
-            <a class="products__name-link" href="#">
+          <div class="products__card">
+            <a class="products__name-link" href="product.html">
               Cat Energy slim 500 г
             </a>
-            <a class="products__photo-link" href="#">
+            <a class="products__photo-link" href="product.html">
               <img class="products__photo" src="https://via.placeholder.com/150x150" width="72" height="84"
                 alt="Cat Energy slim 500 г рис">
             </a>
@@ -218,21 +218,21 @@
                 <td>500 р.</td>
               </tr>
             </table>
-            <a class="products__link" href="#">Заказать</a>
-          </article>
+            <a class="products__link" href="cart.html">Заказать</a>
+          </div>
         </li>
       </ul>
       <div class="products-big-list">
         <p class="products-big-list__text products-big-list__text--bold">Показать еще 100500 товаров</p>
         <p class="products-big-list__text">На самом деле вкусов гораздо больше!</p>
-        <a class="products-big-list__link" href="#">Показать все</a>
+        <a class="products-big-list__link" href="products.html">Показать все</a>
       </div>
     </section>
     <section class="extra-products">
       <h2 class="extra-products__heading">Дополнительные товары</h2>
       <ul class="extra-products__list">
         <li class="extra-products__item">
-          <article class="extra-products__card">
+          <div class="extra-products__card">
             <h3 class="extra-products__name">Сахарозаменитель</h3>
             <table class="extra-products__info">
               <tr>
@@ -240,11 +240,11 @@
                 <td>200 р.</td>
               </tr>
             </table>
-            <a class="extra-products__link" href="#">Заказать</a>
-          </article>
+            <a class="extra-products__link" href="cart.html">Заказать</a>
+          </div>
         </li>
         <li class="extra-products__item">
-          <article class="extra-products__card">
+          <div class="extra-products__card">
             <h3 class="extra-products__name">Питьевая вода</h3>
             <table class="extra-products__info">
               <tr>
@@ -252,11 +252,11 @@
                 <td>50 р.</td>
               </tr>
             </table>
-            <a class="extra-products__link" href="#">Заказать</a>
-          </article>
+            <a class="extra-products__link" href="cart.html">Заказать</a>
+          </div>
         </li>
         <li class="extra-products__item">
-          <article class="extra-products__card">
+          <div class="extra-products__card">
             <h3 class="extra-products__name">Молоко</h3>
             <table class="extra-products__info">
               <tr>
@@ -264,11 +264,11 @@
                 <td>100 р.</td>
               </tr>
             </table>
-            <a class="extra-products__link" href="#">Заказать</a>
-          </article>
+            <a class="extra-products__link" href="cart.html">Заказать</a>
+          </div>
         </li>
         <li class="extra-products__item">
-          <article class="extra-products__card">
+          <div class="extra-products__card">
             <h3 class="extra-products__name">Витамины</h3>
             <table class="extra-products__info">
               <tr>
@@ -276,8 +276,8 @@
                 <td>300 р.</td>
               </tr>
             </table>
-            <a class="extra-products__link" href="#">Заказать</a>
-          </article>
+            <a class="extra-products__link" href="cart.html">Заказать</a>
+          </div>
         </li>
       </ul>
       <div>Закажите все и получите чехол для кота в подарок!</div>
@@ -321,9 +321,6 @@
       </ul>
     </div>
     <div class="page-footer__copyright copyright">
-      <h2 class="visually-hidden">
-        Копирайт
-      </h2>
       <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
     </div>
   </footer>
