--- a/source/form.html
+++ b/source/form.html
@@ -3,16 +3,16 @@
 
 <head>
   <meta charset="utf-8">
-  <title>HTML Academy: Кэт энерджи</title>
+  <title>Подбор программы Кэт энерджи</title>
 </head>
 
 <body class="page__body">
   <header class="page-header">
-    <a class="page-header__logo">
+    <a class="page-header__logo" href="index.html">
       <img class="page-header__logo-image" src="https://via.placeholder.com/150x150" width="33" height="37"
         alt="Кэт энерджи">
     </a>
-    <p class="page-header__title"><b>Cat</b> energy</p>
+    <a class="page-header__title" href="index.html"><b>Cat</b> energy</a>
     <nav class="main-nav">
       <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
       <ul class="main-nav__list site-list">
@@ -36,77 +36,77 @@
   </header>
   <main class="form-main">
     <h1 class="form-main__heading">Подбор программы</h1>
-    <form class="form-main__questionnaire questionnaire" action="https://echo.htmlacademy.ru/" method="get">
-      <p class="questionnaire__text">Заполните анкету, и мы подберем программу питания для вашего кота</p>
-      <fieldset class="questionnaire__item questionnaire__item--info">
+    <form class="form" action="https://echo.htmlacademy.ru/" method="post">
+      <p class="form__text">Заполните анкету, и мы подберем программу питания для вашего кота</p>
+      <fieldset class="form__item form__item--info">
         <legend class="visually-hidden">Информация о питомце</legend>
         <p>
-          <label for="cat-name">Имя:<sup>*</sup></label>
-          <input type="text" id="cat-name" placeholder="Барсик" required>
+          <label for="catName">Имя:<sup>*</sup></label>
+          <input type="text" id="catName" placeholder="Барсик" required>
         </p>
         <p>
-          <label for="cat-weight">Вес (кг):<sup>*</sup></label>
-          <input type="number" id="cat-weight" placeholder="7" required>
+          <label for="catWeight">Вес (кг):<sup>*</sup></label>
+          <input type="number" id="catWeight" placeholder="7" required>
         </p>
         <p>
-          <label for="cat-age">Возраст (лет):</label>
-          <input type="number" id="cat-age" placeholder="7">
+          <label for="catAge">Возраст (лет):</label>
+          <input type="number" id="catAge" placeholder="7">
         </p>
       </fieldset>
-      <fieldset class="questionnaire__item questionnaire__item--program">
+      <fieldset class="form__item form__item--program">
         <legend class="visually-hidden">Цель программы</legend>
-        <ul class="questionnaire__list">
-          <li class="questionnaire__option questionnaire__radio questionnaire__radio--checked">
-            <input type="radio" name="program-version" id="slim-program" checked>
-            <label for="slim-program">Похудение</label>
+        <ul class="form__list">
+          <li class="form__option form__radio">
+            <input type="radio" name="programVersion" id="slimProgram" checked>
+            <label for="slimProgram">Похудение</label>
           </li>
-          <li class="questionnaire__option questionnaire__radio">
-            <input type="radio" name="program-version" id="pro-program">
-            <label for="pro-program">Набор массы</label>
+          <li class="form__option form__radio">
+            <input type="radio" name="programVersion" id="proProgram">
+            <label for="proProgram">Набор массы</label>
           </li>
-          <li class="questionnaire__option questionnaire__radio">
-            <input type="radio" name="program-version" id="need-advice">
-            <label for="need-advice">Не знаю (Нужен ваш совет)</label>
+          <li class="form__option form__radio">
+            <input type="radio" name="programVersion" id="needAdvice">
+            <label for="needAdvice">Не знаю (Нужен ваш совет)</label>
           </li>
         </ul>
       </fieldset>
-      <fieldset class="questionnaire__item questionnaire__item--contacts">
-        <legend class="questionnaire__legend">Контактные данные (владельца кота)</legend>
+      <fieldset class="form__item form__item--contacts">
+        <legend class="form__legend">Контактные данные (владельца кота)</legend>
         <p>
-          <label for="contact-mail">E-mail:<sup>*</sup></label>
-          <input type="email" id="contact-mail" placeholder="kuklachev@gmail.com" required>
+          <label for="contactMail">E-mail:<sup>*</sup></label>
+          <input type="email" id="contactMail" placeholder="kuklachev@gmail.com" required>
         </p>
         <p>
-          <label for="contact-tel">Телефон:<sup>*</sup></label>
-          <input type="tel" id="contact-tel" placeholder="8 (960) 900-60-90" required>
+          <label for="contactTel">Телефон:<sup>*</sup></label>
+          <input type="tel" id="contactTel" placeholder="8 (960) 900-60-90" required>
         </p>
       </fieldset>
       <fieldset>
-        <legend class="questionnaire__legend">Комментарий</legend>
-        <textarea id="comment" name="comment-area" placeholder="Расскажите обо всех повадках кота"></textarea>
+        <label for="comment" class="form__legend">Комментарий</label>
+        <textarea id="comment" name="commentArea" placeholder="Расскажите обо всех повадках кота"></textarea>
       </fieldset>
       <fieldset>
-        <legend class="questionnaire__legend">Дополнительно</legend>
-        <ul class="questionnaire__list">
-          <li class="questionnaire__option questionnaire__checkbox questionnaire__checkbox--checked">
-            <input type="checkbox" name="extra-sweetener" id="sweetener" checked>
+        <legend class="form__legend">Дополнительно</legend>
+        <ul class="form__list">
+          <li class="form__option form__checkbox">
+            <input type="checkbox" name="extraSweetener" id="sweetener" checked>
             <label for="sweetener">Сахарозаменитель</label>
           </li>
-          <li class="questionnaire__option questionnaire__checkbox">
-            <input type="checkbox" name="extra-water" id="water">
+          <li class="form__option form__checkbox">
+            <input type="checkbox" name="extraWater" id="water">
             <label for="water">Питьевая вода</label>
           </li>
-          <li class="questionnaire__option questionnaire__checkbox">
-            <input type="checkbox" name="extra-milk" id="milk">
+          <li class="form__option form__checkbox">
+            <input type="checkbox" name="extraMilk" id="milk">
             <label for="milk">Молоко</label>
           </li>
-          <li class="questionnaire__option questionnaire__checkbox">
-            <input type="checkbox" name="extra-vitamins" id="vitamins">
+          <li class="form__option form__checkbox">
+            <input type="checkbox" name="extraVitamins" id="vitamins">
             <label for="vitamins">Витамины</label>
           </li>
         </ul>
       </fieldset>
-      <button class="questionnaire__button" type="submit">Отправить заявку</button>
+      <button class="form__button" type="submit">Отправить заявку</button>
       <div><sup>*</sup> — Обязательные поля</div>
     </form>
     <section class="address">
@@ -148,9 +148,6 @@
       </ul>
     </div>
     <div class="page-footer__copyright copyright">
-      <h2 class="visually-hidden">
-        Копирайт
-      </h2>
       <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
     </div>
   </footer>
