--- a/source/index.html
+++ b/source/index.html
@@ -12,7 +12,7 @@
       <img class="page-header__logo-image" src="https://via.placeholder.com/150x150" width="33" height="37"
         alt="Кэт энерджи">
     </a>
-    <p class="page-header__title"><b>Cat</b> energy</p>
+    <a class="page-header__title"><b>Cat</b> energy</a>
     <nav class="main-nav">
       <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
       <ul class="main-nav__list site-list">
