начало стилизации главной и каталога (мобильная версия)

--- a/source/index.html
+++ b/source/index.html
@@ -4,6 +4,10 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Кэт энерджи</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body class="page__body">
@@ -93,12 +97,12 @@
         </p>
         <div class="example-result">
           <div class="example-result__item example-result__item--weight">
-            <p class="example__count">5 кг</p>
-            <p class="example__text">снижение веса</p>
+            <p class="example-result__count">5 кг</p>
+            <p class="example-result__text">снижение веса</p>
           </div>
           <div class="example-result__item example-result__item--duration">
-            <p class="example__count">60 дней</p>
-            <p class="example__text">затрачено времени</p>
+            <p class="example-result__count">60 дней</p>
+            <p class="example-result__text">затрачено времени</p>
           </div>
         </div>
         <p class="example__costs">Затраты на питание: 15 000 руб.</p>
@@ -157,9 +161,6 @@
       </ul>
     </div>
     <div class="page-footer__copyright copyright">
-      <h2 class="visually-hidden">
-        Копирайт
-      </h2>
       <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
     </div>
   </footer>
