--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,6 +4,10 @@
 <head>
   <meta charset="utf-8">
   <title>Каталог Кэт энерджи</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
+  <link href="css/normalize.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body class="page__body">
@@ -41,185 +45,213 @@
       <ul class="products__list">
         <li class="products__item">
           <div class="products__card">
-            <a class="products__name-link" href="product.html">
-              Cat Energy PRO 500 г
-            </a>
-            <a class="products__photo-link" href="product.html">
-              <img class="products__photo" src="https://via.placeholder.com/150x150" width="68" height="86"
-                alt="Cat Energy PRO 500 г курица">
-            </a>
-            <table class="products__info">
-              <tr>
-                <td>Масса</td>
-                <td>500 г</td>
-              </tr>
-              <tr>
-                <td>Вкус</td>
-                <td>Курица</td>
-              </tr>
-              <tr>
-                <td>Цена</td>
-                <td>700 р.</td>
-              </tr>
-            </table>
-            <a class="products__link" href="cart.html">Заказать</a>
+            <div class="products__wrapper products__wrapper--photo">
+              <a class="products__photo-link" href="product.html">
+                <img class="products__photo" src="https://via.placeholder.com/150x150" width="68" height="86"
+                  alt="Cat Energy PRO 500 г курица">
+              </a>
+            </div>
+            <div class="products__wrapper products__wrapper--text">
+              <a class="products__name-link" href="product.html">
+                Cat Energy PRO 500 г
+              </a>
+              <table class="products__info">
+                <tr>
+                  <td class="products__data">Масса</td>
+                  <td class="products__value">500 г</td>
+                </tr>
+                <tr>
+                  <td class="products__data">Вкус</td>
+                  <td class="products__value">Курица</td>
+                </tr>
+                <tr>
+                  <td class="products__data">Цена</td>
+                  <td class="products__value products__value--price">700 р.</td>
+                </tr>
+              </table>
+            </div>
           </div>
+          <a class="products__link" href="cart.html">Заказать</a>
         </li>
         <li class="products__item">
           <div class="products__card">
-            <a class="products__name-link" href="product.html">
-              Cat Energy PRO 1000 г
-            </a>
-            <a class="products__photo-link" href="product.html">
-              <img class="products__photo" src="https://via.placeholder.com/150x150" width="84" height="100"
+            <div class="products__wrapper products__wrapper--photo">
+              <a class="products__photo-link" href="product.html">
+                <img class="products__photo" src="https://via.placeholder.com/150x150" width="84" height="100"
                 alt="Cat Energy PRO 1000 г курица">
-            </a>
-            <table class="products__info">
-              <tr>
-                <td>Масса</td>
-                <td>1000 г</td>
-              </tr>
-              <tr>
-                <td>Вкус</td>
-                <td>Курица</td>
-              </tr>
-              <tr>
-                <td>Цена</td>
-                <td>1000 р.</td>
-              </tr>
-            </table>
-            <a class="products__link" href="cart.html">Заказать</a>
+              </a>
+            </div>
+            <div class="products__wrapper products__wrapper--text">
+              <a class="products__name-link" href="product.html">
+                Cat Energy PRO 1000 г
+              </a>
+              <table class="products__info">
+                <tr>
+                  <td class="products__data">Масса</td>
+                  <td class="products__value">1000 г</td>
+                </tr>
+                <tr>
+                  <td class="products__data">Вкус</td>
+                  <td class="products__value">Курица</td>
+                </tr>
+                <tr>
+                  <td class="products__data">Цена</td>
+                  <td class="products__value products__value--price">1000 р.</td>
+                </tr>
+              </table>
+            </div>
           </div>
+            <a class="products__link" href="cart.html">Заказать</a>
         </li>
         <li class="products__item">
           <div class="products__card">
-            <a class="products__name-link" href="product.html">
-              Cat Energy PRO 500 г
-            </a>
-            <a class="products__photo-link" href="product.html">
-              <img class="products__photo" src="https://via.placeholder.com/150x150" width="68" height="78"
+            <div class="products__wrapper products__wrapper--photo">
+              <a class="products__photo-link" href="product.html">
+                <img class="products__photo" src="https://via.placeholder.com/150x150" width="68" height="78"
                 alt="Cat Energy PRO 500 г рыба">
-            </a>
-            <table class="products__info">
-              <tr>
-                <td>Масса</td>
-                <td>500 г</td>
-              </tr>
-              <tr>
-                <td>Вкус</td>
-                <td>Рыба</td>
-              </tr>
-              <tr>
-                <td>Цена</td>
-                <td>700 р.</td>
-              </tr>
-            </table>
-            <a class="products__link" href="cart.html">Заказать</a>
+              </a>
+            </div>
+            <div class="products__wrapper products__wrapper--text">
+              <a class="products__name-link" href="product.html">
+                Cat Energy PRO 500 г
+              </a>
+              <table class="products__info">
+                <tr>
+                  <td class="products__data">Масса</td>
+                  <td class="products__value">500 г</td>
+                </tr>
+                <tr>
+                  <td class="products__data">Вкус</td>
+                  <td class="products__value">Рыба</td>
+                </tr>
+                <tr>
+                  <td class="products__data">Цена</td>
+                  <td class="products__value products__value--price">700 р.</td>
+                </tr>
+              </table>
+            </div>
           </div>
+            <a class="products__link" href="cart.html">Заказать</a>
         </li>
         <li class="products__item">
           <div class="products__card">
-            <a class="products__name-link" href="product.html">
-              Cat Energy PRO 1000 г
-            </a>
-            <a class="products__photo-link" href="product.html">
-              <img class="products__photo" src="https://via.placeholder.com/150x150" width="84" height="100"
-                alt="Cat Energy PRO 1000 г рыба">
-            </a>
-            <table class="products__info">
-              <tr>
-                <td>Масса</td>
-                <td>1000 г</td>
-              </tr>
-              <tr>
-                <td>Вкус</td>
-                <td>Рыба</td>
-              </tr>
-              <tr>
-                <td>Цена</td>
-                <td>1000 р.</td>
-              </tr>
-            </table>
-            <a class="products__link" href="cart.html">Заказать</a>
+            <div class="products__wrapper products__wrapper--photo">
+              <a class="products__photo-link" href="product.html">
+                <img class="products__photo" src="https://via.placeholder.com/150x150" width="84" height="100"
+                  alt="Cat Energy PRO 1000 г рыба">
+              </a>
+            </div>
+            <div class="products__wrapper products__wrapper--text">
+              <a class="products__name-link" href="product.html">
+                Cat Energy PRO 1000 г
+              </a>
+              <table class="products__info">
+                <tr>
+                  <td class="products__data">Масса</td>
+                  <td class="products__value">1000 г</td>
+                </tr>
+                <tr>
+                  <td class="products__data">Вкус</td>
+                  <td class="products__value">Рыба</td>
+                </tr>
+                <tr>
+                  <td class="products__data">Цена</td>
+                  <td class="products__value products__value--price">1000 р.</td>
+                </tr>
+              </table>
+            </div>
           </div>
+            <a class="products__link" href="cart.html">Заказать</a>
         </li>
         <li class="products__item">
           <div class="products__card">
-            <a class="products__name-link" href="product.html">
-              Cat Energy slim 500 г
-            </a>
-            <a class="products__photo-link" href="product.html">
-              <img class="products__photo" src="https://via.placeholder.com/150x150" width="68" height="78"
-                alt="Cat Energy slim 500 г гречка">
-            </a>
-            <table class="products__info">
-              <tr>
-                <td>Масса</td>
-                <td>500 г</td>
-              </tr>
-              <tr>
-                <td>Вкус</td>
-                <td>Гречка</td>
-              </tr>
-              <tr>
-                <td>Цена</td>
-                <td>400 р.</td>
-              </tr>
-            </table>
-            <a class="products__link" href="cart.html">Заказать</a>
+            <div class="products__wrapper products__wrapper--photo">
+              <a class="products__photo-link" href="product.html">
+                <img class="products__photo" src="https://via.placeholder.com/150x150" width="68" height="78"
+                  alt="Cat Energy slim 500 г гречка">
+              </a>
+            </div>
+            <div class="products__wrapper products__wrapper--text">
+              <a class="products__name-link" href="product.html">
+                Cat Energy slim 500 г
+              </a>
+              <table class="products__info">
+                <tr>
+                  <td class="products__data">Масса</td>
+                  <td class="products__value">500 г</td>
+                </tr>
+                <tr>
+                  <td class="products__data">Вкус</td>
+                  <td class="products__value">Гречка</td>
+                </tr>
+                <tr>
+                  <td class="products__data">Цена</td>
+                  <td class="products__value products__value--price">400 р.</td>
+                </tr>
+              </table>
+            </div>
           </div>
+            <a class="products__link" href="cart.html">Заказать</a>
         </li>
         <li class="products__item">
           <div class="products__card">
-            <a class="products__name-link" href="product.html">
-              Cat Energy slim 1000 г
-            </a>
-            <a class="products__photo-link" href="product.html">
-              <img class="products__photo" src="https://via.placeholder.com/150x150" width="84" height="100"
-                alt="Cat Energy slim 1000 г гречка">
-            </a>
-            <table class="products__info">
-              <tr>
-                <td>Масса</td>
-                <td>1000 г</td>
-              </tr>
-              <tr>
-                <td>Вкус</td>
-                <td>Гречка</td>
-              </tr>
-              <tr>
-                <td>Цена</td>
-                <td>700 р.</td>
-              </tr>
-            </table>
-            <a class="products__link" href="cart.html">Заказать</a>
+            <div class="products__wrapper products__wrapper--photo">
+              <a class="products__photo-link" href="product.html">
+                <img class="products__photo" src="https://via.placeholder.com/150x150" width="84" height="100"
+                  alt="Cat Energy slim 1000 г гречка">
+              </a>
+            </div>
+            <div class="products__wrapper products__wrapper--text">
+              <a class="products__name-link" href="product.html">
+                Cat Energy slim 1000 г
+              </a>
+              <table class="products__info">
+                <tr>
+                  <td class="products__data">Масса</td>
+                  <td class="products__value">1000 г</td>
+                </tr>
+                <tr>
+                  <td class="products__data">Вкус</td>
+                  <td class="products__value">Гречка</td>
+                </tr>
+                <tr>
+                  <td class="products__data">Цена</td>
+                  <td class="products__value products__value--price">700 р.</td>
+                </tr>
+              </table>
+            </div>
           </div>
+            <a class="products__link" href="cart.html">Заказать</a>
         </li>
         <li class="products__item">
           <div class="products__card">
-            <a class="products__name-link" href="product.html">
-              Cat Energy slim 500 г
-            </a>
-            <a class="products__photo-link" href="product.html">
-              <img class="products__photo" src="https://via.placeholder.com/150x150" width="72" height="84"
-                alt="Cat Energy slim 500 г рис">
-            </a>
-            <table class="products__info">
-              <tr>
-                <td>Масса</td>
-                <td>500 г</td>
-              </tr>
-              <tr>
-                <td>Вкус</td>
-                <td>Рис</td>
-              </tr>
-              <tr>
-                <td>Цена</td>
-                <td>500 р.</td>
-              </tr>
-            </table>
-            <a class="products__link" href="cart.html">Заказать</a>
+            <div class="products__wrapper products__wrapper--photo">
+              <a class="products__photo-link" href="product.html">
+                <img class="products__photo" src="https://via.placeholder.com/150x150" width="72" height="84"
+                  alt="Cat Energy slim 500 г рис">
+              </a>
+            </div>
+            <div class="products__wrapper products__wrapper--text">
+              <a class="products__name-link" href="product.html">
+                Cat Energy slim 500 г
+              </a>
+              <table class="products__info">
+                <tr>
+                  <td class="products__data">Масса</td>
+                  <td class="products__value">500 г</td>
+                </tr>
+                <tr>
+                  <td class="products__data">Вкус</td>
+                  <td class="products__value">Рис</td>
+                </tr>
+                <tr>
+                  <td class="products__data">Цена</td>
+                  <td class="products__value products__value--price">500 р.</td>
+                </tr>
+              </table>
+            </div>
           </div>
+            <a class="products__link" href="cart.html">Заказать</a>
         </li>
       </ul>
       <div class="products-big-list">
@@ -237,7 +269,7 @@
             <table class="extra-products__info">
               <tr>
                 <td>1 упаковка (100 г)</td>
-                <td>200 р.</td>
+                <td class="extra-products__price">200 р.</td>
               </tr>
             </table>
             <a class="extra-products__link" href="cart.html">Заказать</a>
@@ -249,7 +281,7 @@
             <table class="extra-products__info">
               <tr>
                 <td>5 литров</td>
-                <td>50 р.</td>
+                <td class="extra-products__price">50 р.</td>
               </tr>
             </table>
             <a class="extra-products__link" href="cart.html">Заказать</a>
@@ -261,7 +293,7 @@
             <table class="extra-products__info">
               <tr>
                 <td>1 литр</td>
-                <td>100 р.</td>
+                <td class="extra-products__price">100 р.</td>
               </tr>
             </table>
             <a class="extra-products__link" href="cart.html">Заказать</a>
@@ -273,20 +305,20 @@
             <table class="extra-products__info">
               <tr>
                 <td>1 упаковка (30 г)</td>
-                <td>300 р.</td>
+                <td class="extra-products__price">300 р.</td>
               </tr>
             </table>
             <a class="extra-products__link" href="cart.html">Заказать</a>
           </div>
         </li>
       </ul>
-      <div>Закажите все и получите чехол для кота в подарок!</div>
+      <p class="extra-products__text">Закажите все и получите чехол для кота в подарок!</p>
     </section>
-    <section class="address">
+    <section class="address address-catalog">
       <h2 class="visually-hidden">
         Адрес
       </h2>
-      <div class="address__wrapper">
+      <div class="address__wrapper address-catalog__wrapper">
         <p class="address__text">
           Приглашаем к сотрудничеству дилеров!
         </p>
