--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,9 +4,6 @@
 <head>
   <meta charset="utf-8">
   <title>Каталог Кэт энерджи</title>
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
-  <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
 </head>
 
@@ -314,11 +311,11 @@
       </ul>
       <p class="extra-products__text">Закажите все и получите чехол для кота в подарок!</p>
     </section>
-    <section class="address address-catalog">
+    <section class="address">
       <h2 class="visually-hidden">
         Адрес
       </h2>
-      <div class="address__wrapper address-catalog__wrapper">
+      <div class="address__wrapper address__wrapper--catalog">
         <p class="address__text">
           Приглашаем к сотрудничеству дилеров!
         </p>
